--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/jruby-swing-helpers"]
 	path = lib/jruby-swing-helpers
-	url = https://rdp@github.com/rdp/jruby-swing-helpers.git
+	url = https://github.com/rdp/ruby_simple_gui_creator.git
